# drunkflystudio

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  all_pull.cmd  all_push.cmd  build_linux_all.sh  build_macos_all.sh  build_win32_all.cmd  count_lines_of_code.cmd  count_lines_of_code.sh  open_browser_debug.cmd  open_browser_release.cmd  open_msvc2022_32.cmd  open_msvc2022_64.cmd  open_xcode.sh
.github/workflows/: ci-linux.lua  ci-linux.yml  ci-macosx.yml  ci-windows.lua  ci-windows.yml  ci.yml  (+3 more)
_build/: linux_all.sh  linux_gcc32_debug.sh  linux_gcc32_release.sh  linux_gcc64_debug.sh  linux_gcc64_release.sh  macos_all.sh  macos_xcode.sh  macos_xcode_debug.sh  macos_xcode_release.sh  win32_all.cmd  win32_bc45_debug.cmd  win32_bc45_release.cmd  win32_html5_debug.cmd  win32_html5_release.cmd  win32_linux64_debug.cmd  win32_linux64_release.cmd  win32_mingw32_440_debug.cmd  win32_mingw32_440_release.cmd  win32_mingw32_810_debug.cmd  win32_mingw32_810_release.cmd  win32_mingw32_debug.cmd  win32_mingw32_release.cmd  win32_mingw64_810_debug.cmd  win32_mingw64_debug.cmd  win32_mingw64_release.cmd  win32_msvc2022_32.cmd  win32_msvc2022_32_debug.cmd  win32_msvc2022_32_release.cmd  win32_msvc2022_64.cmd  win32_msvc2022_64_debug.cmd  win32_msvc2022_64_release.cmd  win32_watcom10_debug.cmd  win32_watcom10_release.cmd
_buildtool/: buildtool.cmake  dependencies.cmake  macros.cmake  targets.cmake
_cmake/: common.cmake  flags.cmake  projects.cmake  tests.cmake
_tools/: cmake-3.31.4.cmd  cmake-3.5.2.cmd  count_lines_of_code.sh  linux_install_deps.sh
(+21 files in other folders)
